--- a/source/index.njk
+++ b/source/index.njk
@@ -11,10 +11,7 @@ stylesheets:
 
     <div class="clearfix">
         <div class="Hero__Image">
-            <picture>
-                <source srcset="/static/images/avatar-200.webp" type="image/webp">
-                <img src="/static/images/avatar-200.jpg" alt="Arnelle Balane" width="200px" height="200px">
-            </picture>
+            <img src="/static/images/avatar.jpg?cloudinary=w_200,f_auto" alt="Arnelle Balane" width="200px" height="200px">
         </div>
         <div class="Hero__Content">
             <p>I'm a Web Developer from Cebu, Philippines.</p>
