Add preconnect link to Cloudinary host

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -20,6 +20,7 @@ showProfileHeader: true
         <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Gilroy/Gilroy-Regular-subset.woff2">
         <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Gilroy/Gilroy-Heavy-subset.woff2">
         <link rel="preconnect" href="https://unpkg.com">
+        <link rel="preconnect" href="https://res.cloudinary.com">
 
         <link rel="stylesheet" href="/static/stylesheets/main.css">
         {% for stylesheet in stylesheets %}
