Move icons directly in static/images folder

--- a/source/blog.njk
+++ b/source/blog.njk
@@ -34,7 +34,7 @@ stylesheets:
 <section class="Section Pagination">
     {% if pagination.previousPageHref %}
     <a class="Paginator Paginator--previous fs-18" href="{{ pagination.previousPageHref }}">
-        <img src="/static/images/icons/left.svg" alt="Previous">
+        <img src="/static/images/svg/left.svg" alt="Previous">
         Newer articles
     </a>
     {% endif %}
@@ -42,7 +42,7 @@ stylesheets:
     {% if pagination.nextPageHref %}
     <a class="Paginator Paginator--next fs-18" href="{{ pagination.nextPageHref }}">
         Older articles
-        <img src="/static/images/icons/right.svg" alt="Next">
+        <img src="/static/images/svg/right.svg" alt="Next">
     </a>
     {% endif %}
 </section>
