Rename articles data summary property to description

--- a/source/blog.njk
+++ b/source/blog.njk
@@ -19,7 +19,7 @@ stylesheets:
             <time class="Item__Date fs-16">{{ article.date | formatDate }}</time>
             <div>
                 {% externalLink article.title, article.url, 'Item__Heading fs-24 fw-900' %}
-                <p class="Item__Subheading">{{ article.summary }}</p>
+                <p class="Item__Subheading">{{ article.description }}</p>
                 <ul class="Item__Tags fs-16">
                     {% for category in article.categories %}
                     <li>#{{ category }}</li>
