Add social share image for Async Clipboard API article

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -3,6 +3,7 @@ description:
     Web Developer from Cebu, Philippines. Software Developer at Newlogic.
     Google Developer Expert in Web Technologies. I love building things on the
     Web and sharing about it.
+image: /static/images/social-share.jpg?cloudinary=w_1200,f_auto
 showNavigation: true
 showHomeNavigation: false
 showProfileHeader: true
@@ -29,7 +30,7 @@ showProfileHeader: true
 
         <meta property="og:title" content="{{ title | formatPageTitle }}">
         <meta property="og:description" content="{{ description }}">
-        <meta property="og:image" content="/static/images/social-share.jpg?cloudinary=w_1200,f_auto">
+        <meta property="og:image" content="{{ image }}">
         <meta property="og:url" content="{{ page.url }}">
         <meta name="description" content="{{ description }}">
         <meta name="twitter:card" content="summary_large_image">
