Initial effort at switching from Gilroy to Inter

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -23,6 +23,7 @@ showProfileHeader: true
         <link rel="preconnect" href="https://unpkg.com">
         <link rel="preconnect" href="https://res.cloudinary.com">
 
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
         <link rel="stylesheet" href="/static/stylesheets/main.css">
         {% for stylesheet in stylesheets %}
         <link rel="stylesheet" href="{{ stylesheet }}">
