--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -18,6 +18,7 @@ body {
     min-height: 100vh;
     font-family: "Inter", sans-serif;
     font-size: 1.8rem;
+    font-weight: 200;
     line-height: 1.7;
     color: var(--primary-text-color);
     background-color: var(--primary-background-color);
