Font adjustments in some page elements

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -53,11 +53,11 @@ showProfileHeader: true
         {% if showNavigation %}
         <nav class="Navigation">
             {% if showHomeNavigation %}
-            <a class="Navigation__Link fs-18" href="/">Home</a>
+            <a class="Navigation__Link fs-18 fw-300" href="/">Home</a>
             {% endif %}
-            <a class="Navigation__Link fs-18" href="/blog/">Blog</a>
-            <a class="Navigation__Link fs-18" href="/events/">Events</a>
-            <a class="Navigation__Link fs-18" href="/projects/">Projects</a>
+            <a class="Navigation__Link fs-18 fw-300" href="/blog/">Blog</a>
+            <a class="Navigation__Link fs-18 fw-300" href="/events/">Events</a>
+            <a class="Navigation__Link fs-18 fw-300" href="/projects/">Projects</a>
 
             <span class="DarkModeToggle">
                 <dark-mode-toggle permanent></dark-mode-toggle>
