--- a/source/index.njk
+++ b/source/index.njk
@@ -59,7 +59,7 @@ stylesheets:
         <li class="Item">
             <time class="Item__Date fs-16">{{ event.start_date | formatDate }}</time>
             <div>
-                {% externalLink event.name, event.url, 'Item__Heading' %}
+                {% externalLink event.name, event.url, 'Item__Heading fw-700' %}
                 <p class="Item__Subheading fs-18">{{ event.description }}</p>
             </div>
         </li>
