--- a/source/static/stylesheets/components/article.css
+++ b/source/static/stylesheets/components/article.css
@@ -4,9 +4,10 @@
 }
 
 .Article header h1 {
-    margin-bottom: 1.2rem;
+    margin-bottom: 2.4rem;
     font-size: 3.6rem;
     font-weight: 900;
+    line-height: 1.3;
     color: var(--primary-accent-color);
 }
 
