--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -1,3 +1,67 @@
+/* Web Fonts */
+
+@font-face {
+    font-family: "Inter";
+    font-style:  normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Light-BETA.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Light-BETA.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Inter";
+    font-style:  normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Regular.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Regular.woff") format("woff");
+}
+@font-face {
+    font-family: "Inter";
+    font-style:  italic;
+    font-weight: 400;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Italic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Italic.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Inter";
+    font-style:  normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Bold.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Bold.woff") format("woff");
+}
+@font-face {
+    font-family: "Inter";
+    font-style:  italic;
+    font-weight: 700;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-BoldItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-BoldItalic.woff") format("woff");
+}
+
+@font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 900;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-Black.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-Black.woff") format("woff");
+}
+@font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 900;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-BlackItalic.woff2") format("woff2"),
+         url("../fonts/Inter/Inter-BlackItalic.woff") format("woff");
+}
+
+
+
 /* Globals Styles */
 
 *,
