--- a/source/index.njk
+++ b/source/index.njk
@@ -4,6 +4,8 @@ showProfileHeader: false
 stylesheets:
     - /static/stylesheets/pages/index.css
     - /static/stylesheets/components/items.css
+preloadFonts:
+    - /static/fonts/Inter/Inter-Bold-subset.woff2
 ---
 
 <Section class="Section Hero">
