Load web fonts using Font Loading API

--- a/source/index.njk
+++ b/source/index.njk
@@ -4,8 +4,8 @@ showProfileHeader: false
 stylesheets:
     - /static/stylesheets/pages/index.css
     - /static/stylesheets/components/items.css
-preloadFonts:
-    - /static/fonts/Inter/Inter-Bold-subset.woff2
+extraFonts:
+    - /static/fonts/Inter/Inter-700-normal-subset.woff
 ---
 
 <Section class="Section Hero">
