--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -1,67 +1,3 @@
-/* Web Fonts */
-
-@font-face {
-    font-family: "Inter";
-    font-style:  normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url("../fonts/Inter/Inter-Light-BETA-subset.woff2") format("woff2"),
-         url("../fonts/Inter/Inter-Light-BETA-subset.woff") format("woff");
-}
-
-@font-face {
-    font-family: "Inter";
-    font-style:  normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url("../fonts/Inter/Inter-Regular-subset.woff2") format("woff2"),
-         url("../fonts/Inter/Inter-Regular-subset.woff") format("woff");
-}
-@font-face {
-    font-family: "Inter";
-    font-style:  italic;
-    font-weight: 400;
-    font-display: swap;
-    src: url("../fonts/Inter/Inter-Italic-subset.woff2") format("woff2"),
-         url("../fonts/Inter/Inter-Italic-subset.woff") format("woff");
-}
-
-@font-face {
-    font-family: "Inter";
-    font-style:  normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url("../fonts/Inter/Inter-Bold-subset.woff2") format("woff2"),
-         url("../fonts/Inter/Inter-Bold-subset.woff") format("woff");
-}
-@font-face {
-    font-family: "Inter";
-    font-style:  italic;
-    font-weight: 700;
-    font-display: swap;
-    src: url("../fonts/Inter/Inter-BoldItalic-subset.woff2") format("woff2"),
-         url("../fonts/Inter/Inter-BoldItalic-subset.woff") format("woff");
-}
-
-@font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 900;
-    font-display: swap;
-    src: url("../fonts/Inter/Inter-Black-subset.woff2") format("woff2"),
-         url("../fonts/Inter/Inter-Black-subset.woff") format("woff");
-}
-@font-face {
-    font-family: 'Inter';
-    font-style:  italic;
-    font-weight: 900;
-    font-display: swap;
-    src: url("../fonts/Inter/Inter-BlackItalic-subset.woff2") format("woff2"),
-         url("../fonts/Inter/Inter-BlackItalic-subset.woff") format("woff");
-}
-
-
-
 /* Globals Styles */
 
 *,
@@ -80,14 +16,19 @@ body {
     flex-direction: column;
 
     min-height: 100vh;
-    font-family: "Inter", sans-serif;
+    font-family: "Inter", "Arial", sans-serif;
     font-size: 1.8rem;
     line-height: 1.5;
+    letter-spacing: 0.5px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: var(--primary-text-color);
     background-color: var(--primary-background-color);
     transition: background-color 150ms ease;
+}
+
+body.fontsLoaded {
+    letter-spacing: 0;
 }
 
 a {
