--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -15,11 +15,11 @@ showProfileHeader: true
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#fff">
 
-        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-Light-BETA-subset.woff2">
-        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-Regular-subset.woff2">
-        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-Black-subset.woff2">
-        {% for preloadFont in preloadFonts %}
-        <link rel="preload" as="font" crossorigin="anonymous" href="{{ preloadFont }}">
+        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-300-normal-subset.woff">
+        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-400-normal-subset.woff">
+        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-900-normal-subset.woff">
+        {% for font in extraFonts %}
+        <link rel="preload" as="font" crossorigin="anonymous" href="{{ font }}">
         {% endfor %}
 
         <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="/static/stylesheets/themes/dark.css">
@@ -98,6 +98,16 @@ showProfileHeader: true
             </div>
         </footer>
 
+        <script>
+            const PAGE_FONTS = [
+                '/static/fonts/Inter/Inter-300-normal-subset.woff',
+                '/static/fonts/Inter/Inter-400-normal-subset.woff',
+                '/static/fonts/Inter/Inter-900-normal-subset.woff',
+                // {% for font in extraFonts %}
+                '{{ font }}',
+                // {% endfor %}
+            ];
+        </script>
         <script type="module" src="/static/javascripts/main.mjs"></script>
         <script nomodule src="/static/javascripts/main.js"></script>
 
