--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
 
     min-height: 100vh;
-    font-family: "Inter", "Arial", sans-serif;
+    font-family: "Arial", sans-serif;
     font-size: 1.8rem;
     line-height: 1.5;
     letter-spacing: 0.5px;
@@ -28,6 +28,7 @@ body {
 }
 
 body.fontsLoaded {
+    font-family: "Inter";
     letter-spacing: 0;
 }
 
