--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -1,3 +1,60 @@
+/* Web Fonts */
+
+@font-face {
+    font-family: "Inter";
+    font-style:  normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-300-normal-subset.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Inter";
+    font-style:  normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-400-normal-subset.woff") format("woff");
+}
+@font-face {
+    font-family: "Inter";
+    font-style:  italic;
+    font-weight: 400;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-400-italic-subset.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Inter";
+    font-style:  normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-700-normal-subset.woff") format("woff");
+}
+@font-face {
+    font-family: "Inter";
+    font-style:  italic;
+    font-weight: 700;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-700-italic-subset.woff") format("woff");
+}
+
+@font-face {
+    font-family: 'Inter';
+    font-style:  normal;
+    font-weight: 900;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-900-normal-subset.woff") format("woff");
+}
+@font-face {
+    font-family: 'Inter';
+    font-style:  italic;
+    font-weight: 900;
+    font-display: swap;
+    src: url("../fonts/Inter/Inter-900-italic-subset.woff") format("woff");
+}
+
+
+
 /* Globals Styles */
 
 *,
@@ -28,7 +85,7 @@ body {
 }
 
 body.fontsLoaded {
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     letter-spacing: 0;
 }
 
