Use both woff and woff2, but preload woff2 fonts

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -15,9 +15,9 @@ showProfileHeader: true
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#fff">
 
-        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-300-normal-subset.woff">
-        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-400-normal-subset.woff">
-        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-900-normal-subset.woff">
+        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-300-normal-subset.woff2">
+        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-400-normal-subset.woff2">
+        <link rel="preload" as="font" crossorigin="anonymous" href="/static/fonts/Inter/Inter-900-normal-subset.woff2">
         {% for font in extraFonts %}
         <link rel="preload" as="font" crossorigin="anonymous" href="{{ font }}">
         {% endfor %}
@@ -100,9 +100,9 @@ showProfileHeader: true
 
         <script>
             const PAGE_FONTS = [
-                '/static/fonts/Inter/Inter-300-normal-subset.woff',
-                '/static/fonts/Inter/Inter-400-normal-subset.woff',
-                '/static/fonts/Inter/Inter-900-normal-subset.woff',
+                '/static/fonts/Inter/Inter-300-normal-subset.woff2',
+                '/static/fonts/Inter/Inter-400-normal-subset.woff2',
+                '/static/fonts/Inter/Inter-900-normal-subset.woff2',
                 // {% for font in extraFonts %}
                 '{{ font }}',
                 // {% endfor %}
