--- a/source/static/stylesheets/main.css
+++ b/source/static/stylesheets/main.css
@@ -60,6 +60,23 @@
         url("../fonts/Inter/Inter-900-italic-subset.woff") format("woff");
 }
 
+@font-face {
+    font-family: "Inter Var";
+    font-weight: 100 900;
+    font-display: swap;
+    font-style: normal;
+    font-named-instance: "Regular";
+    src: url("../fonts/Inter/Inter-variable-upright-subset.woff2") format("woff2");
+}
+@font-face {
+    font-family: "Inter Var";
+    font-weight: 100 900;
+    font-display: swap;
+    font-style: italic;
+    font-named-instance: "Italic";
+    src: url("../fonts/Inter/Inter-variable-italic-subset.woff2") format("woff2");
+}
+
 
 
 /* Globals Styles */
@@ -83,12 +100,17 @@ body {
     font-family: "Arial", sans-serif;
     font-size: 1.8rem;
     line-height: 1.5;
-    letter-spacing: 0.5px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: var(--primary-text-color);
     background-color: var(--primary-background-color);
     transition: background-color 150ms ease;
+}
+
+@supports (font-variation-settings: normal) {
+    body {
+        font-family: "Inter Var", "Arial", sans-serif;
+    }
 }
 
 body.fontsLoaded {
