Remove permanent attribute from dark-mode-toggle

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -58,11 +58,11 @@ showProfileHeader: true
             <a class="Navigation__Link fs-18 fw-300" href="/projects/">Projects</a>
 
             <span class="DarkModeToggle">
-                <dark-mode-toggle permanent></dark-mode-toggle>
+                <dark-mode-toggle></dark-mode-toggle>
             </span>
         </nav>
         {% else %}
-        <dark-mode-toggle class="hidden" permanent></dark-mode-toggle>
+        <dark-mode-toggle class="hidden"></dark-mode-toggle>
         {% endif %}
 
         <div class="Wrapper">
