--- a/source/events.njk
+++ b/source/events.njk
@@ -22,7 +22,7 @@ stylesheets:
     <ol class="Items">
         {% for event in (events | filterUpcomingEvents) %}
         <li class="Item">
-            <time class="Item__Date fs-16">{{ event.start_date | formatDate }}</time>
+            <time class="Item__Date fs-16">{{ event.start_date | formatDate('MM/dd') }}</time>
             <div>
                 {% externalLink event.name, event.url, 'Item__Heading fs-20 fw-900' %}
                 <p class="Item__Subheading">{{ event.description }}</p>
@@ -38,7 +38,7 @@ stylesheets:
     <ol class="Items">
         {% for event in (events | filterPreviousEvents) %}
         <li class="Item">
-            <time class="Item__Date fs-16">{{ event.start_date | formatDate }}</time>
+            <time class="Item__Date fs-16">{{ event.start_date | formatDate('MM/dd') }}</time>
             <div>
                 {% externalLink event.name, event.url, 'Item__Heading fs-20 fw-900' %}
                 <p class="Item__Subheading">{{ event.description }}</p>
