--- a/source/_includes/layouts/article.njk
+++ b/source/_includes/layouts/article.njk
@@ -11,7 +11,7 @@ showProfileHeader: false
     <header>
         <h1>{{ title }}</h1>
 
-        <time>{{ date | formatArticleDate }}</time>
+        <time>{{ date | formatDate('MMMM d, yyyy') }}</time>
         <ul>
             {% for category in categories %}
             <li>#{{ category }}</li>
