Exclude some pages from sitemap, add all paginated blog pages

--- a/source/blog.njk
+++ b/source/blog.njk
@@ -7,6 +7,7 @@ description:
 pagination:
     data: collections.articles
     size: 7
+    addAllPagesToCollections: true
 stylesheets:
     - /static/stylesheets/pages/blog.css
     - /static/stylesheets/components/items.css
