--- a/source/feed.njk
+++ b/source/feed.njk
@@ -13,6 +13,7 @@ metadata:
     feed:
         url: https://arnellebalane.com/feed.xml
         id: https://arnellebalane.com/
+excludeFromSitemap: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
