--- a/source/404.njk
+++ b/source/404.njk
@@ -9,6 +9,7 @@ description:
     Web and sharing about it.
 stylesheets:
     - /static/stylesheets/pages/standalone.css
+excludeFromSitemap: true
 ---
 
 <section class="Section Standalone">
