--- a/source/offline.njk
+++ b/source/offline.njk
@@ -4,6 +4,7 @@ showNavigation: false
 title: It looks like you're offline.
 stylesheets:
     - /static/stylesheets/pages/standalone.css
+excludeFromSitemap: true
 ---
 
 <section class="Section Standalone">
