Use HTTPS for site url

--- a/source/feed.njk
+++ b/source/feed.njk
@@ -6,7 +6,7 @@ metadata:
         Web Developer from Cebu, Philippines. Software Developer at Newlogic.
         Google Developer Expert in Web Technologies. I love building things on the
         Web and sharing about it.
-    url: http://arnellebalane.com/
+    url: https://arnellebalane.com/
     author:
         name: Arnelle Balane
         email: arnellebalane@gmail.com
