--- a/source/static/stylesheets/components/article.css
+++ b/source/static/stylesheets/components/article.css
@@ -17,19 +17,9 @@
     color: var(--secondary-text-color);
 }
 
-.Article header ul {
-    display: inline-flex;
-    flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
-
-    list-style: none;
+.Article header a {
     font-size: 1.6rem;
-    color: var(--secondary-text-color);
-}
-
-.Article header li {
-    margin-right: 1.6rem;
+    text-decoration: underline;
 }
 
 
