--- a/source/offline.njk
+++ b/source/offline.njk
@@ -2,10 +2,12 @@
 layout: layouts/main.njk
 showNavigation: false
 title: It looks like you're offline.
-stylesheets:
-    - /static/stylesheets/pages/standalone.css
 excludeFromSitemap: true
 ---
+
+{% block stylesheets %}
+<link rel="stylesheet" href="/static/stylesheets/pages/standalone.css">
+{% endblock %}
 
 <section class="Section Standalone">
     <h1 class="Standalone__Heading fs-30 fw-900">
